connect db container with bot, add volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 version: "3"
 
-#todo добавить volumes/ соединить базу с ботом
 
 services:
   db:
@@ -20,11 +19,31 @@ services:
     image: bot
     restart: unless-stopped
     env_file: .env
+    volumes:
+    - ./db/:/var/lib/mongodb/
     depends_on:
       - db
     environment:
       - MONGODB_HOST=db
+      - MONGODB_PASSWORD=${MONGO_PASSWORD}
+      - MONGODB_USERNAME=${MONGO_USERNAME}
       - TOKEN=${TELEGRAM_TOKEN}
+      - MONGODB_PORT=${MONGO_PORT}
+
+#  scheldule:
+#    build:
+#      context: .
+#      dockerfile: DockerfileScheldule
+#    image: scheldule
+#    restart: unless-stopped
+#    env_file: .env
+#    depends_on:
+#      - db
+#    environment:
+#      - MONGODB_HOST=db
+#      - MONGODB_PASSWORD=${MONGO_PASSWORD}
+#      - MONGODB_USERNAME=${MONGO_USERNAME}
+#      - TOKEN=${TELEGRAM_TOKEN}
   #volumes:
   #dbdata:
   #
