--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   db:
     image: mongo
     restart: unless-stopped
-    env_file: .env
+    env_file: env_file
     volumes:
       - ./db/:/data/db/
     ports:
@@ -25,8 +25,6 @@ services:
     depends_on:
       - db
     environment:
-      - MONGODB_HOST=db
       - MONGODB_PASSWORD=${MONGO_PASSWORD}
       - MONGODB_USERNAME=${MONGO_USERNAME}
       - TOKEN=${TELEGRAM_TOKEN}
-      - MONGODB_PORT=${MONGO_PORT}
