Add script for running unittests

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
+# Test logs
+unittest_logs.txt
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
