--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ lit==16.0.3
 MarkupSafe==2.1.2
 mpmath==1.3.0
 networkx==3.1
+nltk==3.8.1
 numpy==1.24.3
 omegaconf==2.3.0
 vosk==0.3.44
@@ -22,6 +23,7 @@ python-telegram-bot==13.4.1
 schedule==1.1.0
 pymongo==3.11.3
 pymodm==0.4.3
+pymystem3==0.2.0
 cPython==0.0.6
 noisereduce==2.0.1
 requests==2.30.0
