--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -15,9 +15,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install -r emotional_speech_recognizing/requirements.txt
-        pip install -r silero_demo/requirements.txt
         pip install pylint
     - name: Run Pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint *.py
