--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     env_file: .env
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: "confluentinc/cp-zookeeper:7.6.0"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -43,7 +43,7 @@ services:
       - "22181:2181"
 
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: "confluentinc/cp-kafka:7.6.0"
     depends_on:
       - zookeeper
     ports:
