--- a/.github/workflows/pipreqs.yml
+++ b/.github/workflows/pipreqs.yml
@@ -1,4 +1,4 @@
-name: PEP8 Style Guide Enforcement
+name: Checking requirements
 
 on: [push]
 
@@ -11,13 +11,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.10"
-    - name: Installation of Pylint
+    - name: Installation of Pipreqs
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-    - name: Install Dependencies
+        pip install pipreqs
+    - name: Dependency check (Run Pipreqs)
       run: |
-        pip install -r src/requirements.txt
-    - name: Style check (Run Pylint)
-      run: |
-        pylint $(git ls-files 'src/*.py')
+        pipreqs --savepath src/reqs-check.txt --mode no-pin src/
+        python requirements_check.py src/requirements.txt src/reqs-check.txt
