--- a/.github/workflows/container_check.yml
+++ b/.github/workflows/container_check.yml
@@ -10,10 +10,10 @@ jobs:
 
       - name: Create .env
         env:
-          TELEGRAM_TOKEN: ${{ secrets.TEST_BOT_TOKEN }}
+          TELEGRAM_TOKEN: abcd
         run: |
           cp env_file .env
-          sed -i.bak "s/PasteYourTelegramToken/${TELEGRAM_TOKEN}" .env
+          sed -i -e "s/PasteYourTelegramToken/${TELEGRAM_TOKEN}/g" .env
           cat .env
 
 #      - name: Build images
