--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,9 +1,9 @@
-name: PEP8 Style Guide Enforcement \ Requirements check
+name: PEP8 Style Guide Enforcement & Requirements check
 
 on: [push]
 
 jobs:
-  build:
+  base_check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -12,17 +12,21 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.10"
+
       - name: Installation of testing utilities (Pipreqs, Pylint)
         run: |
           python -m pip install --upgrade pip
           pip install pipreqs pylint
+
       - name: Dependency check (Run Pipreqs)
         run: |
           pipreqs --savepath src/reqs-check.txt --mode no-pin src/
           python requirements_check.py src/requirements.txt src/reqs-check.txt
+
       - name: Install Dependencies
         run: |
           pip install -r src/requirements.txt
+
       - name: Style check (Run Pylint)
         run: |
           pylint $(git ls-files 'src/*.py')
