--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,10 @@ services:
     container_name: "silero-tts-service"
     restart: unless-stopped
     env_file: .env
+    deploy:
+      resources:
+        limits:
+          memory: 2G
 
   whisper-asr-webservice:
     image: "onerahmet/openai-whisper-asr-webservice:v1.2.0"
@@ -37,27 +41,22 @@ services:
     env_file: .env
 
   zookeeper:
-    image: "confluentinc/cp-zookeeper:7.6.0"
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
+    image: wurstmeister/zookeeper
+    container_name: zookeeper
     ports:
-      - "22181:2181"
-
+      - "2181:2181"
   kafka:
-    image: "confluentinc/cp-kafka:7.6.0"
-    depends_on:
-      - zookeeper
+    image: "wurstmeister/kafka:2.13-2.8.1"
+    container_name: kafka
     ports:
-      - "29092:29092"
-    restart: unless-stopped
+      - "9094:9094"
     environment:
-      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://kafka:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_CREATE_TOPICS: "stt:1:1,tts:1:1"
+      KAFKA_LISTENERS: INTERNAL://0.0.0.0:9092,OUTSIDE://0.0.0.0:9094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://localhost:9094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
 
 volumes:
   db-data:
