--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Installation of testing utilities (Pipreqs, Pylint)
         run: |
           python -m pip install --upgrade pip
-          pip install pipreqs pylint
+          pip install pipreqs==0.5.0 pylint==3.2.4
 
       - name: Dependency check (Run Pipreqs)
         run: |
