feat: add emotion recognition module to bot container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: phsycho_bot
     image: bot
     restart: unless-stopped
     env_file: .env
